# Thesis

./: .gitignore  READHPC.md  README.md  READme.md  deterministic_eval.py  rag_basic.ipynb  rag_vectordb.ipynb  requirements.txt
Documentation/: 01_introduction.tex  02_background.tex  03_literature_review.tex  04_methodology.tex  05_experiments.tex  06_results_discussion.tex  07_conclusion_future_work.tex  0_prebody.tex  ADG.sty  _main.tex  appendices.tex  manuals.tex  references.bib
Thesis/: 01_introduction.tex  02_background.tex  03_literature_review.tex  04_methodology.tex  05_experiments.tex  06_results_discussion.tex  0_covers.tex  0_prebody.tex  ADG.sty  appendices.tex  manuals.tex  references.bib
hpc-logs/: README.md
notebooks-hpc/: rag_basic.ipynb  rag_hybrid.ipynb  rag_hybrid_&_rerank.ipynb  (+4 more)
rag-training2025-main/: pyproject.toml  rag_advanced.ipynb  rag_basic01.ipynb  rag_basic02.ipynb  rag_vectordb.ipynb
rag-training2025-main/dummy_data/: QUERY_REPHRASE_TEMPLATE.txt  RAG_TEMPLATE.txt
rag-training2025-main/dummy_data/documents_dir/: Annual Hackathon Announcement.docx  Cybersecurity Awareness Month.docx  Employee Recognition Program.docx  New Office Layout Plan.docx  Office Layout Redesign.docx  Product X Launch Timeline.docx  Product Z Launch Strategy.docx  QuantumStream CLI Usage.docx  QuantumStream Data Encryption.docx  QuantumStream Plugin System.docx  QuantumStream REST API.docx  QuantumStream Scheduler.docx  QuantumStream Scheduling Tasks.docx
rag-training2025-main/vllm/: embedder_launcher.sh  llm_launcher.sh  ranker_launcher.sh  serve_models.sh
(+81 files in other folders)
