[project]
name = "edu29"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling-haystack>=0.1.1",
    "haystack-ai>=2.17.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "jupyter-server>=2.17.0",
    "milvus-haystack>=0.0.17",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "pymilvus>=2.6.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]
